crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__PY39_RUF012_RUF012_0.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF012_0.py:17:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
17 | def f(arg: int = None):  # RUF011
   |            ^^^ RUF012
18 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
14 14 |     pass
15 15 | 
16 16 | 
17    |-def f(arg: int = None):  # RUF011
   17 |+def f(arg: Optional[int] = None):  # RUF011
18 18 |     pass
19 19 | 
20 20 | 

RUF012_0.py:21:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
21 | def f(arg: str = None):  # RUF011
   |            ^^^ RUF012
22 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
18 18 |     pass
19 19 | 
20 20 | 
21    |-def f(arg: str = None):  # RUF011
   21 |+def f(arg: Optional[str] = None):  # RUF011
22 22 |     pass
23 23 | 
24 24 | 

RUF012_0.py:25:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
25 | def f(arg: typing.List[str] = None):  # RUF011
   |            ^^^^^^^^^^^^^^^^ RUF012
26 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
22 22 |     pass
23 23 | 
24 24 | 
25    |-def f(arg: typing.List[str] = None):  # RUF011
   25 |+def f(arg: Optional[typing.List[str]] = None):  # RUF011
26 26 |     pass
27 27 | 
28 28 | 

RUF012_0.py:29:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
29 | def f(arg: Tuple[str] = None):  # RUF011
   |            ^^^^^^^^^^ RUF012
30 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
26 26 |     pass
27 27 | 
28 28 | 
29    |-def f(arg: Tuple[str] = None):  # RUF011
   29 |+def f(arg: Optional[Tuple[str]] = None):  # RUF011
30 30 |     pass
31 31 | 
32 32 | 

RUF012_0.py:63:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
63 | def f(arg: Union = None):  # RUF011
   |            ^^^^^ RUF012
64 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
60 60 |     pass
61 61 | 
62 62 | 
63    |-def f(arg: Union = None):  # RUF011
   63 |+def f(arg: Optional[Union] = None):  # RUF011
64 64 |     pass
65 65 | 
66 66 | 

RUF012_0.py:67:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
67 | def f(arg: Union[int, str] = None):  # RUF011
   |            ^^^^^^^^^^^^^^^ RUF012
68 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
64 64 |     pass
65 65 | 
66 66 | 
67    |-def f(arg: Union[int, str] = None):  # RUF011
   67 |+def f(arg: Optional[Union[int, str]] = None):  # RUF011
68 68 |     pass
69 69 | 
70 70 | 

RUF012_0.py:71:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
71 | def f(arg: typing.Union[int, str] = None):  # RUF011
   |            ^^^^^^^^^^^^^^^^^^^^^^ RUF012
72 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
68 68 |     pass
69 69 | 
70 70 | 
71    |-def f(arg: typing.Union[int, str] = None):  # RUF011
   71 |+def f(arg: Optional[typing.Union[int, str]] = None):  # RUF011
72 72 |     pass
73 73 | 
74 74 | 

RUF012_0.py:90:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
90 | def f(arg: int | float = None):  # RUF011
   |            ^^^^^^^^^^^ RUF012
91 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
87 87 |     pass
88 88 | 
89 89 | 
90    |-def f(arg: int | float = None):  # RUF011
   90 |+def f(arg: Optional[int | float] = None):  # RUF011
91 91 |     pass
92 92 | 
93 93 | 

RUF012_0.py:94:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
   |
94 | def f(arg: int | float | str | bytes = None):  # RUF011
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ RUF012
95 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
91 91 |     pass
92 92 | 
93 93 | 
94    |-def f(arg: int | float | str | bytes = None):  # RUF011
   94 |+def f(arg: Optional[int | float | str | bytes] = None):  # RUF011
95 95 |     pass
96 96 | 
97 97 | 

RUF012_0.py:109:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
109 | def f(arg: Literal[1, "foo"] = None):  # RUF011
    |            ^^^^^^^^^^^^^^^^^ RUF012
110 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
106 106 |     pass
107 107 | 
108 108 | 
109     |-def f(arg: Literal[1, "foo"] = None):  # RUF011
    109 |+def f(arg: Optional[Literal[1, "foo"]] = None):  # RUF011
110 110 |     pass
111 111 | 
112 112 | 

RUF012_0.py:113:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
113 | def f(arg: typing.Literal[1, "foo", True] = None):  # RUF011
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF012
114 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
110 110 |     pass
111 111 | 
112 112 | 
113     |-def f(arg: typing.Literal[1, "foo", True] = None):  # RUF011
    113 |+def f(arg: Optional[typing.Literal[1, "foo", True]] = None):  # RUF011
114 114 |     pass
115 115 | 
116 116 | 

RUF012_0.py:132:22: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
132 | def f(arg: Annotated[int, ...] = None):  # RUF011
    |                      ^^^ RUF012
133 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
129 129 |     pass
130 130 | 
131 131 | 
132     |-def f(arg: Annotated[int, ...] = None):  # RUF011
    132 |+def f(arg: Annotated[Optional[int], ...] = None):  # RUF011
133 133 |     pass
134 134 | 
135 135 | 

RUF012_0.py:136:32: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
136 | def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF011
    |                                ^^^^^^^^^ RUF012
137 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
133 133 |     pass
134 134 | 
135 135 | 
136     |-def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF011
    136 |+def f(arg: Annotated[Annotated[Optional[int | str], ...], ...] = None):  # RUF011
137 137 |     pass
138 138 | 
139 139 | 

RUF012_0.py:152:11: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
152 | def f(
153 |     arg1: int = None,  # RUF011
    |           ^^^ RUF012
154 |     arg2: Union[int, float] = None,  # RUF011
155 |     arg3: Literal[1, 2, 3] = None,  # RUF011
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
149 149 | 
150 150 | 
151 151 | def f(
152     |-    arg1: int = None,  # RUF011
    152 |+    arg1: Optional[int] = None,  # RUF011
153 153 |     arg2: Union[int, float] = None,  # RUF011
154 154 |     arg3: Literal[1, 2, 3] = None,  # RUF011
155 155 | ):

RUF012_0.py:153:11: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
153 | def f(
154 |     arg1: int = None,  # RUF011
155 |     arg2: Union[int, float] = None,  # RUF011
    |           ^^^^^^^^^^^^^^^^^ RUF012
156 |     arg3: Literal[1, 2, 3] = None,  # RUF011
157 | ):
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
150 150 | 
151 151 | def f(
152 152 |     arg1: int = None,  # RUF011
153     |-    arg2: Union[int, float] = None,  # RUF011
    153 |+    arg2: Optional[Union[int, float]] = None,  # RUF011
154 154 |     arg3: Literal[1, 2, 3] = None,  # RUF011
155 155 | ):
156 156 |     pass

RUF012_0.py:154:11: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
154 |     arg1: int = None,  # RUF011
155 |     arg2: Union[int, float] = None,  # RUF011
156 |     arg3: Literal[1, 2, 3] = None,  # RUF011
    |           ^^^^^^^^^^^^^^^^ RUF012
157 | ):
158 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
151 151 | def f(
152 152 |     arg1: int = None,  # RUF011
153 153 |     arg2: Union[int, float] = None,  # RUF011
154     |-    arg3: Literal[1, 2, 3] = None,  # RUF011
    154 |+    arg3: Optional[Literal[1, 2, 3]] = None,  # RUF011
155 155 | ):
156 156 |     pass
157 157 | 

RUF012_0.py:182:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
    |
182 | def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF011
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF012
183 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
179 179 |     pass
180 180 | 
181 181 | 
182     |-def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF011
    182 |+def f(arg: Optional[Union[Annotated[int, ...], Union[str, bytes]]] = None):  # RUF011
183 183 |     pass


