crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__PY39_RUF012_RUF012_1.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF012_1.py:4:12: RUF012 [*] PEP 484 prohibits implicit `Optional`
  |
4 | def f(arg: int = None):  # RUF011
  |            ^^^ RUF012
5 |     pass
  |
  = help: Convert to `Optional[T]`

ℹ Suggested fix
1 1 | # No `typing.Optional` import
  2 |+from typing import Optional
2 3 | 
3 4 | 
4   |-def f(arg: int = None):  # RUF011
  5 |+def f(arg: Optional[int] = None):  # RUF011
5 6 |     pass


