crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF006_RUF006.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
expression: diagnostics
---
- kind:
    AsyncioDanglingTask:
      keyword: CreateTask
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 49
  fix: ~
  parent: ~
- kind:
    AsyncioDanglingTask:
      keyword: EnsureFuture
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 51
  fix: ~
  parent: ~

