crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF010_RUF010.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF010.py:9:4: RUF010 [*] Use conversion in f-string
   |
 9 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   |    ^^^^^^^^ RUF010
10 | 
11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |
   = help: Replace f-string function call with conversion

ℹ Fix
6  6  |     pass
7  7  | 
8  8  | 
9     |-f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   9  |+f"{bla!s}, {repr(bla)}, {ascii(bla)}"  # RUF010
10 10 | 
11 11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
12 12 | 

RUF010.py:9:16: RUF010 [*] Use conversion in f-string
   |
 9 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   |                ^^^^^^^^^ RUF010
10 | 
11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |
   = help: Replace f-string function call with conversion

ℹ Fix
6  6  |     pass
7  7  | 
8  8  | 
9     |-f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   9  |+f"{str(bla)}, {bla!r}, {ascii(bla)}"  # RUF010
10 10 | 
11 11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
12 12 | 

RUF010.py:9:29: RUF010 [*] Use conversion in f-string
   |
 9 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   |                             ^^^^^^^^^^ RUF010
10 | 
11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |
   = help: Replace f-string function call with conversion

ℹ Fix
6  6  |     pass
7  7  | 
8  8  | 
9     |-f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
   9  |+f"{str(bla)}, {repr(bla)}, {bla!a}"  # RUF010
10 10 | 
11 11 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
12 12 | 

RUF010.py:11:4: RUF010 [*] Use conversion in f-string
   |
11 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
12 | 
13 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |    ^^^^^^^^^^^ RUF010
14 | 
15 | f"{foo(bla)}"  # OK
   |
   = help: Replace f-string function call with conversion

ℹ Fix
8  8  | 
9  9  | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
10 10 | 
11    |-f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   11 |+f"{d['a']!s}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
12 12 | 
13 13 | f"{foo(bla)}"  # OK
14 14 | 

RUF010.py:11:19: RUF010 [*] Use conversion in f-string
   |
11 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
12 | 
13 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |                   ^^^^^^^^^^^^ RUF010
14 | 
15 | f"{foo(bla)}"  # OK
   |
   = help: Replace f-string function call with conversion

ℹ Fix
8  8  | 
9  9  | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
10 10 | 
11    |-f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   11 |+f"{str(d['a'])}, {d['b']!r}, {ascii(d['c'])}"  # RUF010
12 12 | 
13 13 | f"{foo(bla)}"  # OK
14 14 | 

RUF010.py:11:35: RUF010 [*] Use conversion in f-string
   |
11 | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
12 | 
13 | f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   |                                   ^^^^^^^^^^^^^ RUF010
14 | 
15 | f"{foo(bla)}"  # OK
   |
   = help: Replace f-string function call with conversion

ℹ Fix
8  8  | 
9  9  | f"{str(bla)}, {repr(bla)}, {ascii(bla)}"  # RUF010
10 10 | 
11    |-f"{str(d['a'])}, {repr(d['b'])}, {ascii(d['c'])}"  # RUF010
   11 |+f"{str(d['a'])}, {repr(d['b'])}, {d['c']!a}"  # RUF010
12 12 | 
13 13 | f"{foo(bla)}"  # OK
14 14 | 


