crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF011_RUF011_1.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF011_1.py:4:12: RUF011 [*] PEP 484 prohibits implicit `Optional`
  |
4 | def f(arg: int = None):  # RUF011
  |            ^^^ RUF011
5 |     pass
  |
  = help: Convert to `T | None`

ℹ Suggested fix
1 1 | # No `typing.Optional` import
2 2 | 
3 3 | 
4   |-def f(arg: int = None):  # RUF011
  4 |+def f(arg: int | None = None):  # RUF011
5 5 |     pass


